add summary section

--- a/index.html
+++ b/index.html
@@ -117,6 +117,23 @@
         </div>
     </section>
 
+    <!-- Quick Summary Section -->
+    <section class="section">
+        <div class="container">
+            <div class="box">
+                <h3 class="title is-4 has-text-centered">สรุปข้อมูลสำคัญ</h3>
+                <div class="content">
+                    <ul>
+                        <li><div class="icon-text"><span class="icon"><i class="fas fa-calendar-check"></i></span><span><strong>วันเรียน:</strong> ทุกวันเสาร์ 9:00–12:00 น. ทั้งหมด 16 ครั้ง เริ่มเรียนวันแรก วันที่ 6 กย. 2568</span></div></li>
+                        <li><div class="icon-text"><span class="icon"><i class="fas fa-tags"></i></span><span><strong>ราคา:</strong> THB 4,900 ถึง 23 ส.ค. 2568 → THB 6,900 ถึง 30 ส.ค. 2568 → THB 9,900 หลังจากนั้น</span></div></li>
+                        <li><div class="icon-text"><span class="icon"><i class="fas fa-video"></i></span><span><strong>รูปแบบการเรียน:</strong> เรียนสดทุกสัปดาห์ + วิดีโอ On‑Demand (ดูย้อนหลังได้ทุกคลาส ไม่มีหมดอายุ)</span></div></li>
+                        <li><div class="icon-text"><span class="icon"><i class="fas fa-user-graduate"></i></span><span><strong>ผู้ไม่มีประสบการณ์:</strong> หลักสูตรนี้ต้องมีพื้นฐานและเคยทำโปรเจ็กต์ครบวงจรมาแล้ว หากยังไม่มีพื้นฐาน แนะนำเริ่มจากคอร์สพื้นฐาน เช่น CodeCamp Thailand ที่ <a href="https://www.facebook.com/CodeCampThailand/" target="_blank" rel="noopener">ลิงก์นี้</a></span></div></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Key Stats Section -->
     <section class="section has-text-centered">
         <div class="container">
