add instructor section

--- a/index.html
+++ b/index.html
@@ -509,8 +509,47 @@
                  </div>
              </div>
 
+             <!-- Instructor Introduction Section -->
+             <div class="box mt-6">
+                 <h3 class="title is-4 has-text-centered">แนะนำผู้สอน</h3>
+                 <div class="content">
+                     <div class="has-text-centered mb-5">
+                         <h4 class="title is-5 has-text-primary">นายกฤษฎา เฉลิมสุข (คุณโอ๊ค)</h4>
+                         <p class="subtitle is-6">ผู้เชี่ยวชาญด้านเทคโนโลยีและธุรกิจที่มีประสบการณ์มากกว่า 14 ปี</p>
+                     </div>
 
-            
+                     <h5 class="title is-6 has-text-info">ประวัติการทำงานและผลงาน</h5>
+                     <p>นายกฤษฎา เฉลิมสุข (คุณโอ๊ค) เป็นผู้เชี่ยวชาญด้านเทคโนโลยีและธุรกิจที่มีประสบการณ์มากกว่า 14 ปีในหลากหลายอุตสาหกรรม โดยมีบทบาทสำคัญในการขับเคลื่อนนวัตกรรมและสร้างความเติบโตให้กับองค์กรต่างๆ</p>
+
+                     <h6 class="title is-6 mt-4">ประสบการณ์ด้านธุรกิจและเทคโนโลยี:</h6>
+                     <ul>
+                        <li><strong>โปรแกรมเมอร์:</strong> มีประสบการณ์การทำงานในตำแหน่ง Senior Programmer ให้กับบริษัทสตาร์ทอัพในประเทศสิงคโปร์</li>
+                        <li><strong>ผู้ร่วมก่อตั้งและอดีตน่ายกสมาคมโปรแกรมเมอร์ไทย</strong></li>
+                        <li><strong>ผู้เชี่ยวชาญการเขียน Program ต่างๆ มากกว่า 10 ภาษา</strong></li>
+                        <li><strong>ผู้ก่อตั้งและผู้บริหาร:</strong> เป็นเจ้าของธุรกิจสตาร์ทอัพ 3 แห่งและบริษัทซอฟต์แวร์เฮาส์ 1 แห่ง เคยร่วมก่อตั้งและเป็นผู้บริหารในบริษัทเทคโนโลยีชั้นนำหลายแห่ง อาทิ บริษัท Officiency, บริษัท Codekids, บรษัท Buzzfreeze Solution</li>
+                         <li><strong>การบริหารโครงการ:</strong> มีประสบการณ์เป็น Product Manager และ Project Manager ในการบริหารโครงการด้านเทคโนโลยีให้กับบริษัทในตลาดหลักทรัพย์และสตาร์ทอัพมากกว่า 30 โครงการ</li>
+                     </ul>
+
+                     <h6 class="title is-6 mt-4">ประสบการณ์ด้านการให้คำปรึกษาและการศึกษา:</h6>
+                     <ul>
+                         <li><strong>ที่ปรึกษา:</strong> ได้รับความไว้วางใจให้เป็นที่ปรึกษาด้าน Digital Transformation ให้กับหน่วยงานภาครัฐ เช่น DEPA และสำนักงานนวัตกรรมแห่งชาติ (NIA) รวมถึงเป็นที่ปรึกษามาตรฐาน ISO29110</li>
+                         <li><strong>ผู้เชี่ยวชาญ:</strong> มีความเชี่ยวชาญในด้าน Design Thinking, Lean Startup, Agile, UX/UI และ Big Data และสามารถอธิบายแนวคิดที่ซับซ้อนให้เข้าใจง่ายได้เป็นอย่างดี โดยเป็นเจ้าของหลักสูตร UX/UI Design ที่บูรณาการแนวคิดเหล่านี้เข้าด้วยกัน</li>
+                         <li><strong>การศึกษาและพัฒนาบุคลากร:</strong> เป็นผู้บริหาร Codecamp Thailand ซึ่งเป็นสถาบันที่พัฒนาทักษะด้านโปรแกรมเมอร์และ Data Scientist อีกทั้งยังมีประสบการณ์การสอนให้กับโปรแกรมเมอร์และผู้ประกอบการมานานกว่า 5 ปี และเคยอบรมผู้ที่ไม่มีทักษะให้สามารถเป็นโปรแกรมเมอร์ได้สำเร็จมากกว่า 1,000 คน</li>
+                     </ul>
+
+                     <h5 class="title is-6 has-text-info mt-5">การศึกษา</h5>
+                     <p>นายกฤษฎา เฉลิมสุข มีประวัติการศึกษาที่โดดเด่นและเป็นเครื่องยืนยันถึงความมุ่งมั่นในการเรียนรู้ในระดับสูง</p>
+
+                     <ul>
+                         <li><strong>ระดับปริญญาเอก (กำลังศึกษา):</strong> คณะวิศวกรรมศาสตร์ สาขาวิชาการจัดการข้อมูล และภาควิชาวิทยาศาสตร์คอมพิวเตอร์และการจัดการข้อมูล สถาบันเทคโนโลยีแห่งเอเชีย (AIT)</li>
+                         <li><strong>ระดับปริญญาโท:</strong> คณะวิศวกรรมศาสตร์ สาขาวิชาการจัดการข้อมูล และภาควิชาวิทยาศาสตร์คอมพิวเตอร์และการจัดการข้อมูล สถาบันเทคโนโลยีแห่งเอเชีย (AIT)</li>
+                         <li><strong>ระดับปริญญาตรี:</strong> คณะวิศวกรรมศาสตร์ ภาควิชาวิศวกรรมคอมพิวเตอร์ จุฬาลงกรณ์มหาวิทยาลัย (เกียรตินิยมอันดับ 2)</li>
+                         <li><strong>ระดับมัธยมศึกษา:</strong> โรงเรียนเตรียมอุดมศึกษา ด้วยเกรดเฉลี่ย 4.00 ทุกภาคการศึกษา</li>
+                     </ul>
+
+                     <p class="mt-4"><strong>ความสำเร็จด้านวิชาการ:</strong> เคยทำคะแนน Entrance วิชาสายวิศวกรรมศาสตร์ได้เป็นอันดับ 3 ของประเทศ และเป็นตัวแทนเข้าค่ายแข่งขันคณิตศาสตร์โอลิมปิกระดับประเทศ</p>
+                 </div>
+             </div>
          </div>
      </section>
     <!-- Main Curriculum Section -->
