--- a/index.html
+++ b/index.html
@@ -134,6 +134,43 @@
         </div>
     </section>
 
+    <!-- Why This Course Section -->
+    <section class="section">
+        <div class="container">
+            <div class="box">
+                <h3 class="title is-4 has-text-centered">ทำไมต้องเรียนคอร์สนี้</h3>
+                <p class="has-text-centered">เริ่มจากปัญหาจริงที่เจอบ่อยในโลกการทำงาน แล้วแก้ให้จบภายในคอร์ส</p>
+                <div class="columns is-multiline">
+                    <div class="column is-6">
+                        <div class="box is-shadowless">
+                            <h4 class="title is-5"><span class="icon has-text-primary"><i class="fas fa-user"></i></span> สำหรับ Junior Programmer</h4>
+                            <ul class="mt-3">
+                                <li>- ยังขาดประสบการณ์ทำระบบ Production จริง ตั้งแต่ CI/CD, Deploy, Monitoring</li>
+                                <li>- ออกแบบสถาปัตยกรรมระบบยังไม่เป็น (API Design, Database Schema, Scaling)</li>
+                                <li>- เขียนโค้ดได้ แต่ยังไม่ถนัด Testing, Clean Code, Code Review และเครื่องมือวัดคุณภาพ</li>
+                                <li>- ทำงานเป็นทีมกับ PO/PM/QA/DevOps ยังไม่คล่อง กระบวนการ Agile/Scrum ไม่ครบ</li>
+                                <li>- แก้ปัญหา Performance/Debug/Observability ยังไม่เป็นระบบ</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="column is-6">
+                        <div class="box is-shadowless">
+                            <h4 class="title is-5"><span class="icon has-text-primary"><i class="fas fa-sync-alt"></i></span> สำหรับสาย Reskill/เด็กจบใหม่ IT</h4>
+                            <ul class="mt-3">
+                                <li>- เรียนมาหลายคอร์สแต่ยังต่อยอดเป็นโปรเจ็กต์ครบวงจรไม่ได้</li>
+                                <li>- ยังไม่เข้าใจภาพรวม Software Delivery ตั้งแต่ Requirements → Dev → Test → Deploy → Operate</li>
+                                <li>- พอร์ตโฟลิโอยังไม่โดนใจ HR/Tech Lead ไม่มีผลงานระดับ Production</li>
+                                <li>- ขาดคำแนะนำเรื่องอาชีพ การเตรียมสัมภาษณ์ และมาตรฐานที่บริษัทชั้นนำใช้จริง</li>
+                                <li>- ใช้เครื่องมือยุคใหม่ Cloud/Docker/K8s/GitOps ยังไม่มั่นใจ</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <p class="has-text-centered mt-4">คอร์สนี้ออกแบบจากประสบการณ์ทำงานจริงในบริษัทและสตาร์ทอัพ ครอบคลุมตั้งแต่ระบบพื้นฐานจนถึงการ Deploy และดูแลระบบจริง</p>
+            </div>
+        </div>
+    </section>
+
     <!-- Key Stats Section -->
     <section class="section has-text-centered">
         <div class="container">
