--- a/index.html
+++ b/index.html
@@ -249,15 +249,15 @@
                         <div class="box is-shadowless">
                             <h4 class="title is-5"><span class="icon has-text-primary"></span> สำหรับ Junior Programmer</h4>
                             <ul class="mt-3">
-                                <li> ยังขาดประสบการณ์ทำระบบ Production จริง ตั้งแต่ CI/CD,
+                                <li> ✅ยังขาดประสบการณ์ทำระบบ Production จริง ตั้งแต่ CI/CD,
                                     Deploy, Monitoring</li>
-                                <li> ออกแบบสถาปัตยกรรมระบบยังไม่เป็น (API Design, Database
+                                <li> ✅ออกแบบสถาปัตยกรรมระบบยังไม่เป็น (API Design, Database
                                     Schema, Scaling)</li>
-                                <li>เขียนโค้ดได้ แต่ยังไม่ถนัด Testing, Clean Code, Code
+                                <li>✅เขียนโค้ดได้ แต่ยังไม่ถนัด Testing, Clean Code, Code
                                     Review และเครื่องมือวัดคุณภาพ</li>
-                                <li>ทำงานเป็นทีมกับ PO/PM/QA/DevOps ยังไม่คล่อง กระบวนการ
+                                <li>✅ทำงานเป็นทีมกับ PO/PM/QA/DevOps ยังไม่คล่อง กระบวนการ
                                     Agile/Scrum ไม่ครบ</li>
-                                <li> แก้ปัญหา Performance/Debug/Observability ยังไม่เป็นระบบ
+                                <li> ✅แก้ปัญหา Performance/Debug/Observability ยังไม่เป็นระบบ
                                 </li>
                             </ul>
                         </div>
@@ -267,15 +267,15 @@
                             <h4 class="title is-5"><span class="icon has-text-primary"><i
                                         class="fas fa-sync-alt"></i></span> สำหรับสาย Reskill/เด็กจบใหม่ IT</h4>
                             <ul class="mt-3">
-                                <li> เรียนมาหลายคอร์สแต่ยังต่อยอดเป็นโปรเจ็กต์ครบวงจรไม่ได้
+                                <li> ✅เรียนมาหลายคอร์สแต่ยังต่อยอดเป็นโปรเจ็กต์ครบวงจรไม่ได้
                                 </li>
-                                <li> ยังไม่เข้าใจภาพรวม Software Delivery ตั้งแต่
+                                <li> ✅ยังไม่เข้าใจภาพรวม Software Delivery ตั้งแต่
                                     Requirements → Dev → Test → Deploy → Operate</li>
-                                <li> พอร์ตโฟลิโอยังไม่โดนใจ HR/Tech Lead ไม่มีผลงานระดับ
+                                <li> ✅พอร์ตโฟลิโอยังไม่โดนใจ HR/Tech Lead ไม่มีผลงานระดับ
                                     Production</li>
-                                <li> ขาดคำแนะนำเรื่องอาชีพ การเตรียมสัมภาษณ์
+                                <li> ✅ขาดคำแนะนำเรื่องอาชีพ การเตรียมสัมภาษณ์
                                     และมาตรฐานที่บริษัทชั้นนำใช้จริง</li>
-                                <li>ใช้เครื่องมือยุคใหม่ Cloud/Docker/K8s/GitOps
+                                <li>✅ใช้เครื่องมือยุคใหม่ Cloud/Docker/K8s/GitOps
                                     ยังไม่มั่นใจ</li>
                             </ul>
                         </div>
@@ -297,11 +297,11 @@
                         <h4 class="title is-6"><span class="icon has-text-primary"><i
                                     class="fas fa-check-circle"></i></span> สิ่งที่ทำได้ทันที</h4>
                         <ul class="mt-3">
-                            <li>ออกแบบระบบและ API ให้พร้อมใช้งานจริง พร้อมเอกสารและเวอร์ชัน</li>
-                            <li>ตั้งค่า CI/CD Pipeline แบบอัตโนมัติ ตั้งแต่ Test → Build → Deploy</li>
-                            <li>คอนเทนเนอร์ไลซ์บริการด้วย Docker และ Deploy ด้วย Kubernetes/Minikube</li>
-                            <li>ติดตั้ง Observability (Log, Metrics, Tracing) และทำ Debug เชิงระบบ</li>
-                            <li>ทำ Code Review/Testing ให้ผ่านมาตรฐานคุณภาพทีม</li>
+                            <li>✅ออกแบบระบบและ API ให้พร้อมใช้งานจริง พร้อมเอกสารและเวอร์ชัน</li>
+                            <li>✅ตั้งค่า CI/CD Pipeline แบบอัตโนมัติ ตั้งแต่ Test → Build → Deploy</li>
+                            <li>✅คอนเทนเนอร์ไลซ์บริการด้วย Docker และ Deploy ด้วย Kubernetes/Minikube</li>
+                            <li>✅ติดตั้ง Observability (Log, Metrics, Tracing) และทำ Debug เชิงระบบ</li>
+                            <li>✅ทำ Code Review/Testing ให้ผ่านมาตรฐานคุณภาพทีม</li>
                         </ul>
                     </div>
                     <div class="column is-4">
@@ -330,11 +330,11 @@
                         <h4 class="title is-6"><span class="icon has-text-primary"><i
                                     class="fas fa-chart-line"></i></span> ตัวชี้วัดคุณภาพโค้ด/งาน</h4>
                         <ul class="mt-3">
-                            <li>Test Coverage เป้าหมาย ≥ 70% (Unit + Integration)</li>
-                            <li>Static Analysis ผ่านเกณฑ์คุณภาพ (SonarQube Quality Gate)</li>
-                            <li>Pipeline สำเร็จแบบอัตโนมัติภายในเวลาที่กำหนด</li>
-                            <li>MTTR/Debug ลดลงด้วย Observability และ Error Budget</li>
-                            <li>PR Checklist ผ่านครบ: Design, Security, Performance, Readability</li>
+                            <li>✅Test Coverage เป้าหมาย ≥ 70% (Unit + Integration)</li>
+                            <li>✅Static Analysis ผ่านเกณฑ์คุณภาพ (SonarQube Quality Gate)</li>
+                            <li>✅Pipeline สำเร็จแบบอัตโนมัติภายในเวลาที่กำหนด</li>
+                            <li>✅MTTR/Debug ลดลงด้วย Observability และ Error Budget</li>
+                            <li>✅PR Checklist ผ่านครบ: Design, Security, Performance, Readability</li>
                         </ul>
                     </div>
                 </div>
@@ -392,10 +392,10 @@
                                 <p class="title is-6">E‑Commerce Microservices</p>
                                 <p class="subtitle is-7 has-text-grey">Order, Catalog, Payment, Notification</p>
                                 <ul class="mt-2">
-                                    <li><strong>สถาปัตยกรรม:</strong> REST, Async Messaging (RabbitMQ), DB per service
+                                    <li><strong>✅สถาปัตยกรรม:</strong> REST, Async Messaging (RabbitMQ), DB per service
                                     </li>
-                                    <li><strong>เทคโนโลยี:</strong> Spring Boot, PostgreSQL, Redis, Docker, K8s</li>
-                                    <li><strong>ผลลัพธ์:</strong> รองรับ 1k+ req/min และ Zero‑downtime deploy</li>
+                                    <li><strong>✅เทคโนโลยี:</strong> Spring Boot, PostgreSQL, Redis, Docker, K8s</li>
+                                    <li><strong>✅ผลลัพธ์:</strong> รองรับ 1k+ req/min และ Zero‑downtime deploy</li>
                                 </ul>
                             </div>
                         </div>
@@ -406,9 +406,9 @@
                                 <p class="title is-6">Real‑time Analytics Dashboard</p>
                                 <p class="subtitle is-7 has-text-grey">Event Ingestion & Monitoring</p>
                                 <ul class="mt-2">
-                                    <li><strong>สถาปัตยกรรม:</strong> Event‑driven, Stream Processing</li>
-                                    <li><strong>เทคโนโลยี:</strong> Prometheus, Grafana, WebSocket, Redis</li>
-                                    <li><strong>ผลลัพธ์:</strong> Latency < 1s, Alerting/Visualization พร้อมใช้งาน</li>
+                                    <li><strong>✅สถาปัตยกรรม:</strong> Event‑driven, Stream Processing</li>
+                                    <li><strong>✅เทคโนโลยี:</strong> Prometheus, Grafana, WebSocket, Redis</li>
+                                    <li><strong>✅ผลลัพธ์:</strong> Latency < 1s, Alerting/Visualization พร้อมใช้งาน</li>
                                 </ul>
                             </div>
                         </div>
@@ -419,9 +419,9 @@
                                 <p class="title is-6">DevOps‑ready API Platform</p>
                                 <p class="subtitle is-7 has-text-grey">API Gateway, Auth, Observability</p>
                                 <ul class="mt-2">
-                                    <li><strong>สถาปัตยกรรม:</strong> Modular Monolith → Microservices</li>
-                                    <li><strong>เทคโนโลยี:</strong> Spring Security, SonarQube, GitHub Actions</li>
-                                    <li><strong>ผลลัพธ์:</strong> Lead time ลดลง 60% ด้วย CI/CD อัตโนมัติ</li>
+                                    <li><strong>✅สถาปัตยกรรม:</strong> Modular Monolith → Microservices</li>
+                                    <li><strong>✅เทคโนโลยี:</strong> Spring Security, SonarQube, GitHub Actions</li>
+                                    <li><strong>✅ผลลัพธ์:</strong> Lead time ลดลง 60% ด้วย CI/CD อัตโนมัติ</li>
                                 </ul>
                             </div>
                         </div>
