--- a/index.html
+++ b/index.html
@@ -2099,6 +2099,16 @@
                         </div>
 
                     </div>
+                    <div class="columns is-centered mt-5">
+                        <div class="column is-12">
+                            <a href="manual.html" target="_blank"
+                                class="button is-info is-large is-fullwidth"
+                                style="font-size: 1.2rem; font-weight: bold; padding: 1rem;">
+                                🔥 ดูตัวอย่างของการสร้าง Web E-Commerce ด้วยการใช้ทุกเทคนิค
+                            </a>
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
