change price to 6900

--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
                         </li>
                         <li>
                             <div class="icon-text"><span class="icon"><i
-                                        class="fas fa-tags"></i></span><span><strong>ราคา:</strong> THB 4,900 ถึง 23
-                                    ส.ค. 2568 → THB 6,900 ถึง 30 ส.ค. 2568 → THB 9,900 หลังจากนั้น</span></div>
+                                        class="fas fa-tags"></i></span><span><strong>ราคา:</strong> THB 6,900 ถึง 30 ส.ค. 2568
+                                    → THB 9,900 หลังจากนั้น</span></div>
                         </li>
                         <li>
                             <div class="icon-text"><span class="icon"><i
@@ -190,14 +190,16 @@
         <div class="container">
             <div class="price-box">
                 <h3 class="title is-4">Camp ต่อยอดเพื่อรู้ทุกเทคนิคในโลกการทำงานจริงในบริษัทชั้นนำ</h3>
-                <h4 class="title is-size-1 has-text-dark">THB 4,900 (เหลือ 5 ที่เท่านั้น)</h4>
-                <p class="is-size-5 has-text-dark">ราคานี้ถึงวันที่ 23 สิงหาคม 2568</p>
+                <h4 class="title is-size-1 has-text-dark">THB 6,900</h4>
+                <p class="is-size-5 has-text-dark">ราคานี้ถึงวันที่ 30 สิงหาคม 2568</p>
                 <div class="columns is-centered mt-4">
                     <div class="column is-narrow">
                         <p class="is-size-5 has-text-dark"><strong>จากนั้นราคาจะถูกปรับเป็น:</strong></p>
-                        <p class="is-size-6 has-text-grey mt-2">THB 6,900 ถึง 30 สิงหาคม 2568</p>
-                        <p class="is-size-6 has-text-grey">และ THB 9,900 หลังจากนั้น</p>
+                        <p class="is-size-6 has-text-grey mt-2">THB 9,900 หลังจากนั้น</p>
                     </div>
+                </div>
+                <div class="notification is-info mt-4">
+                    <strong>พิเศษ!</strong> หากสมัครและชำระเงินภายในวันที่ 26 สิงหาคม 2568 รับฟรี Namifie face scrub และ Namifie ครีมกันแดด มูลค่ารวม 600 บาท
                 </div>
             </div>
         </div>
@@ -1763,7 +1765,7 @@
                             <li><strong>เกรดเฉลี่ยรวม:</strong> ได้เกรด B (80%) ขึ้นไป</li>
                             <li><strong>โครงงานจบ:</strong> ได้เกรด B+ (85%) ขึ้นไป</li>
                             <li><strong>การส่งงาน:</strong> ส่งงานครบถ้วนทุกโมดูล (20 Projects)</li>
-                            <li><strong>การเข้าเรียน:</strong> เข้าเรียนครบทุกคลาส หรือดูย้อนหลังครบถ้วน</li>
+                            <li><strong>การเข้าเรียน:</strong> เข้าเรียนครบถ้วน หรือดูย้อนหลังครบถ้วน</li>
                             <li><strong>Final Exam:</strong> สอบผ่านด้วยคะแนน 85% ขึ้นไป</li>
                             <li><strong>Portfolio Quality:</strong> มีผลงานที่แสดงทักษะครบถ้วนทุกด้าน</li>
                         </ul>
