change some detail

--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
                             <p class="is-size-6">หากไม่ได้งานภายใน 6 เดือน คืนเงิน 100%</p>
                             <div class="notification is-warning is-light mt-3">
                                 <p class="is-size-4 has-text-weight-bold">+ THB 10,000</p>
-                                <p class="is-size-6">รวมทั้งหมด: THB 14,900</p>
+                                <p class="is-size-6">รวมทั้งหมด: THB 16,900</p>
                             </div>
                             <ul class="mt-3">
                                 <li>✅ การันตีได้งาน 100%</li>
@@ -2013,10 +2013,10 @@
                             <div class="box"
                                 style="background: rgba(255,255,255,0.1); border: 2px solid rgba(255,255,255,0.3); color: white;">
                                 <h4 class="title is-5 has-text-white">📅 เปิดรับสมัคร</h4>
-                                <p class="is-size-6">วันนี้ - 23 สิงหาคม 2568</p>
+                                <p class="is-size-6">วันนี้ - 6 กันยายน 2568</p>
                                 <div class="notification is-warning is-light mt-2">
-                                    <p class="is-size-5 has-text-weight-bold has-text-dark">Early Bird Price</p>
-                                    <p class="is-size-4 has-text-weight-bold has-text-success">THB 4,900</p>
+                                    <p class="is-size-5 has-text-weight-bold has-text-dark">Quick Bird Price</p>
+                                    <p class="is-size-4 has-text-weight-bold has-text-success">THB 6,900</p>
                                 </div>
                             </div>
                         </div>
@@ -2106,7 +2106,7 @@
                             <a href="manual.html" target="_blank"
                                 class="button is-info is-large is-fullwidth"
                                 style="font-size: 1.2rem; font-weight: bold; padding: 1rem;">
-                                🔥 ดูตัวอย่างของการสร้าง Web E-Commerce ด้วยการใช้ทุกเทคนิค
+                                 รายละเอียดทุกเทคนิค
                             </a>
                         </div>
 
