Change some detail

--- a/index.html
+++ b/index.html
@@ -2058,9 +2058,9 @@
 
 
                     <div class="notification is-warning is-light mt-4" style="background: rgba(255,255,255,0.9);">
-                        <p class="is-size-6 has-text-dark"><strong>⚡ ข้อดีของการสมัคร Early Bird:</strong></p>
+                        <p class="is-size-6 has-text-dark"><strong>⚡ ข้อดีของการสมัคร Quick Bird:</strong></p>
                         <ul class="is-size-7 has-text-dark">
-                            <li>ประหยัด THB 5,000 จากราคาปกติ</li>
+                            <li>ประหยัด THB 3,000 จากราคาปกติ</li>
                             <li>ได้สิทธิ์เข้าถึงเนื้อหาพิเศษก่อนใคร</li>
                             <li>มีเวลาเตรียมตัวก่อนเริ่มเรียน</li>
                             <li>รับประกันที่นั่งในคลาส (จำกัด 30 คน)</li>
@@ -2073,7 +2073,7 @@
                     </p>
 
                     <p class="is-size-6" style="color: rgba(255,255,255,0.8);">
-                        <strong>⏰ หมดเขต Early Bird:</strong> อีกเพียง <span
+                        <strong>⏰ หมดเขต Quick Bird:</strong> อีกเพียง <span
                             class="has-text-warning has-text-weight-bold">7 วัน</span> เท่านั้น!
                     </p>
 
@@ -2086,7 +2086,7 @@
                             <a href="https://forms.gle/Ww2u8iW3iYqz2p5q7" target="_blank"
                                 class="button is-success is-large is-fullwidth"
                                 style="font-size: 1.2rem; font-weight: bold; padding: 1rem;">
-                                💳 สมัครเรียนตอนนี้ (Early Bird)
+                                💳 สมัครเรียนตอนนี้ (Quick Bird)
                             </a>
                         </div>
 
