--- a/pg/1.html
+++ b/pg/1.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/reset.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/reveal.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/theme/black.min.css" id="theme">
+    <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
+        body, .reveal, .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal p, .reveal ul, .reveal li, .reveal code, .reveal pre, .reveal small, .reveal ol, .reveal table, .reveal th, .reveal td {
+            font-family: 'Prompt', 'Fira Code', 'JetBrains Mono', monospace, sans-serif !important;
+        }
         .reveal h1, .reveal h2, .reveal h3, .reveal h4 {
             color: #42affa;
         }
@@ -17,7 +21,6 @@
             padding: 15px;
         }
         .reveal code {
-            font-family: 'Fira Code', 'JetBrains Mono', monospace;
             color: #e8e8e8;
         }
         .reveal .slide-number {
